--- a/calculadora.html
+++ b/calculadora.html
@@ -5,40 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./style.css" rel="stylesheet" type="text/css"></link>
     <title>Calculadora</title>
+    <script src="script.js"></script>
 </head>
 <body>
+    <div class="fundo">
+    <h1>Danilo Marques</h1>
     <div class="calculadora">
         <h1>Calculadora</h1>
-        <p id="resultado">Resultado</p>
+        <p id="resultado"></p>
         <div>
             <table>
                 <tr>
-                    <td><button>C</button></td>
-                    <td><button><</button></td>
-                    <td><button>/</button></td>
-                    <td><button>x</button></td>
+                    <td><button class="botao" onclick="clean('C')">C</button></td>
+                    <td><button class="botao" onclick="backspace('<')"><</button></td>
+                    <td><button class="botao" onclick="insert('>')">/</button></td>
+                    <td><button class="botao" onclick="insert('x')">x</button ></td>
                 </tr>
                 <tr>
-                    <td><button>7</button></td>
-                    <td><button>8</button></td>
-                    <td><button>9</button></td>
-                    <td><button>=</button></td>
+                    <td><button class="botao" onclick="insert('7')">7</button></td>
+                    <td><button class="botao" onclick="insert('8')">8</button></td>
+                    <td><button class="botao" onclick="insert('9')">9</button></td>
+                    <td><button class="botao" onclick="insert('=')">=</button></td>
                 </tr>
                 <tr>
-                    <td><button>4</button></td>
-                    <td><button>5</button></td>
-                    <td><button>6</button></td>
-                    <td><button>+</button></td>
+                    <td><button class="botao" onclick="insert('4')">4</button></td>
+                    <td><button class="botao" onclick="insert('5')">5</button></td>  
+                    <td><button class="botao" onclick="insert('6')">6</button></td>
+                    <td><button class="botao" onclick="insert('+')">+</button></td>
                 </tr>
                 <tr>
-                    <td><button>1</button></td>
-                    <td><button>2</button></td>
-                    <td><button>3</button></td>
-                    <td rowspan="2"><button>=</button></td>
+                    <td><button class="botao" onclick="insert('1')">1</button></td>
+                    <td><button class="botao" onclick="insert('2')">2</button></td>
+                    <td><button class="botao" onclick="insert('3')">3</button></td>
+                    <td rowspan="2"><button class="rowspan" onclick="calculate()">=</button></td>
                 </tr>
                 <tr>
-                    <td colspan="2"><button>0</button></td>
-                    <td><button>1</button></td>
+                    <td colspan="2"><button class="colspan" onclick="insert('0')">0</button>
+                    <td><button class="botao">1</button></td>
                 </tr>
             </table>
         </div>
