adicionando imagem de fundo

--- a/calculadora.html
+++ b/calculadora.html
@@ -7,19 +7,19 @@
     <title>Calculadora</title>
     <script src="script.js"></script>
 </head>
-<body>
+<body class="corpo">
     <div class="fundo">
-    <h1>Danilo Marques</h1>
+    <!-- <h1 class="titulo">Calculadora</h1> -->
     <div class="calculadora">
-        <h1>Calculadora</h1>
+        <h1 id="marca">CASIO</h1>
         <p id="resultado"></p>
         <div>
             <table>
                 <tr>
                     <td><button class="botao" onclick="clean('C')">C</button></td>
                     <td><button class="botao" onclick="backspace('<')"><</button></td>
-                    <td><button class="botao" onclick="insert('>')">/</button></td>
-                    <td><button class="botao" onclick="insert('x')">x</button ></td>
+                    <td><button class="botao" onclick="insert('/')">/</button></td>
+                    <td><button class="botao" onclick="insert('*')">x</button ></td>
                 </tr>
                 <tr>
                     <td><button class="botao" onclick="insert('7')">7</button></td>
