--- a/calculadora.html
+++ b/calculadora.html
@@ -11,11 +11,30 @@
     <div class="fundo">
     <!-- <h1 class="titulo">Calculadora</h1> -->
     <div class="calculadora">
-        <h1 id="marca">CASIO</h1>
-        <p id="resultado"></p>
-        <div>
+        <div class="cabeca">
+            <div class="botao">Calculadora</div>
+            <div class="botao">Visor</div>
             
         </div>
+        <div class="botao">C</div>
+        <div class="botao"><</div>
+        <div class="botao">/</div>
+        <div class="botao">x</div>
+        <div class="botao">7</div>
+        <div class="botao">8</div>
+        <div class="botao">9</div>
+        <div class="botao">-</div>
+        <div class="botao">4</div>
+        <div class="botao">5</div>
+        <div class="botao">6</div>
+        <div class="botao">+</div>
+        <div class="botao">1</div>
+        <div class="botao">2</div>
+        <div class="botao">3</div>
+        <div class="botao">=</div>
+        <div class="botao">0</div>
+        <div class="botao">.</div>
+        <div></div>
     </div>
 </body>
 </html>
