retirando botões que coloquei a mais

--- a/calculadora.html
+++ b/calculadora.html
@@ -12,8 +12,8 @@
     <!-- <h1 class="titulo">Calculadora</h1> -->
     <div class="calculadora">
         <div class="cabeca">
-            <div class="botao">Calculadora</div>
-            <div class="botao">Visor</div>
+            <div class="visor">Calculadora</div>
+            <div class="visor">Visor</div>
             
         </div>
         <div class="fila">
@@ -54,14 +54,14 @@
             <div class="botao">6</div>
             <div class="botao">+</div>
         </div>
-        <div>
+        <div class="fila">
 
             <div class="botao">1</div>
             <div class="botao">2</div>
             <div class="botao">3</div>
             <div class="botao">=</div>
         </div>
-        <div>
+        <div class="fila">
             <div class="botao">0</div>
             <div class="botao">.</div>
 
