--- a/calculadora.html
+++ b/calculadora.html
@@ -26,6 +26,7 @@
             <div class="botao">1</div>
             <div class="botao">2</div>
             <div class="botao">3</div>
+            <div></div>
             <div>=</div>
             <div>0</div>
             <div>.</div> 
