--- a/calculadora.html
+++ b/calculadora.html
@@ -26,8 +26,8 @@
             <div class="botao">1</div>
             <div class="botao">2</div>
             <div class="botao">3</div>
-            <div class="botao">=</div>
-            <div class="botao">0</div>
+            <div>=</div>
+            <div>0</div>
             <div class="botao">.</div> 
             <!-- <div class="botao"></div> -->
             <!-- <div class="botao"></div> -->
