alerando tags e seletores

--- a/calculadora.html
+++ b/calculadora.html
@@ -8,8 +8,8 @@
     <script src="script.js"></script>
 </head>
 <body class="corpo">
-    <div class="calculadora">
-            <div class="marca">Calculadora</div>
+    <main class="calculadora">
+            <div class="marca">CASIO</div>
             <div class="visor">Visor</div>
             <div class="botao">C</div>
             <div class="botao"><</div>
@@ -29,8 +29,6 @@
             <div>=</div>
             <div>0</div>
             <div class="botao">.</div> 
-            <!-- <div class="botao"></div> -->
-            <!-- <div class="botao"></div> -->
-    </div>
+    </main>
 </body>
 </html>
